examples/test/testpolicy4751.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4751
  namespace: namespace191
spec:
  podSelector:
    matchLabels:
      key3: value39
      key13: value20
      key15: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value28
          key9: value21
      podSelector:
        matchLabels:
          key17: value49
          key48: value21
          key44: value11
